# training-cody-python

./: .gitignore  README.md  pyproject.toml  users.db
0_basics/: GUIDE.md
1_beginner/exercise_1_code_explanation/: README.md  sample_code.py
1_beginner/exercise_2_documentation/: README.md  undocumented_code.py
1_beginner/exercise_3_simple_generation/: README.md  generate_function.py
2_intermediate/exercise_1_debugging/: README.md  buggy_code.py
2_intermediate/exercise_2_test_generation/: README.md  code_to_test.py
2_intermediate/exercise_3_refactoring/: README.md  refactor_me.py
3_advanced/exercise_1_complex_refactoring/: README.md  complex_app.py
3_advanced/exercise_2_security_review/: README.md  security_review.py  setup_users_db.py  users.db
3_advanced/exercise_3_performance/: README.md  optimise_me.py
